# cli-utilities

./: .gitignore  Makefile  README.md  install.py  pyproject.toml
.dev_docs/: uiux.md
docs/: cflow.md  codesynth.md
src/: cflow.py  codesynth.py
src/codesynth/: README.md  __init__.py  cli.py  collector.py  constants.py  generator.py  interactive.py  output.py  parser.py  reverse.py  rich_compat.py  utils.py
tests/: test_cli_integration.py  test_collector.py  test_generator.py  test_parser.py  test_reverse.py  test_utils.py
